...
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/create_adventure_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle_border"
                android:hint="Enter title..."
...
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />

            <EditText
                android:id="@+id/create_adventure_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle_border"
                android:hint="Enter description..."
...
                android:layout_marginTop="0dp"
                android:id="@+id/create_adventure_recycler_view"
                android:orientation="horizontal"
                />

            <Button
                android:id="@+id/create_adventure_upload_image_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:text="Upload Image"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/setImageAlert"
                android:layout_width="match_parent"
...
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />

            <EditText
                android:id="@+id/create_adventure_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle_border"
                android:hint="MM-dd-yyyy hh:mm:ss"
...
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/create_adventure_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rectangle_border"
                android:hint="Address, City, Province, Code"
...
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:textSize="10dp"
                android:textColor="@color/design_default_color_error" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"

                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:text="Create Adventure"
                android:textSize="14sp"

                />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
...
