...
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="Choose and Create Adventures!"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create_adventure"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="3dp"
            android:clickable="true"
            android:gravity="center_vertical"
...
