...
            <!--                android:layout_centerHorizontal="true"-->
            <!--                android:layout_marginTop="3dp"-->
            <!--                android:background="@drawable/category_border"-->
            <!--                android:src="@android:drawable/btn_star_big_on" />-->

            <TextView
                android:id="@+id/categoryName"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Movie"
...
